--- a/libft/Makefile
+++ b/libft/Makefile
@@ -39,6 +39,15 @@ SRC = ft_atoi.c\
 	ft_toupper.c\
 	get_next_line.c\
 	ft_printf.c\
+	ft_lstnew.c\
+	ft_lstadd_front.c\
+	ft_lstsize.c\
+	ft_lstlast.c\
+	ft_lstadd_back.c\
+	ft_lstdelone.c\
+	ft_lstclear.c\
+	ft_lstiter.c\
+	ft_lstmap.c\
 
 OBJ = $(patsubst %.c,%.o,$(SRC))
 
